syntax = "proto3";

package binary;

option go_package = "github.com/sbilibin2017/gophkeeper/pkg/grpc";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message BinaryAddRequest {
  string secret_name = 1;
  bytes data = 2;
  map<string, string> meta = 3;
}

message BinaryFilterRequest {
  string secret_name = 1;
}

message BinaryDB {
  string secret_name = 1;
  string secret_owner = 2;
  bytes data = 3;
  map<string, string> meta = 4;
  google.protobuf.Timestamp updated_at = 5;
}

service BinaryService {
  rpc Add(BinaryAddRequest) returns (google.protobuf.Empty);
  rpc Get(BinaryFilterRequest) returns (BinaryDB);
  rpc List(google.protobuf.Empty) returns (stream BinaryDB);
}
