syntax = "proto3";

package text;

option go_package = "github.com/sbilibin2017/gophkeeper/pkg/grpc";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message TextAddRequest {
  string secret_name = 1;
  string content = 2;
  map<string, string> meta = 3;
}

message TextFilterRequest {
  string secret_name = 1;
}

message TextDB {
  string secret_name = 1;
  string secret_owner = 2;
  string content = 3;
  map<string, string> meta = 4;
  google.protobuf.Timestamp updated_at = 5;
}

service TextService {
  rpc Add(TextAddRequest) returns (google.protobuf.Empty);
  rpc Get(TextFilterRequest) returns (TextDB);
  rpc List(google.protobuf.Empty) returns (stream TextDB);
}
